fix alignment of pattern and call boxes (bingo)

--- a/bingo/index.css
+++ b/bingo/index.css
@@ -62,6 +62,15 @@ a:hover {
 	touch-action: manipulation;
 	text-align: center;
 }
+.set.pattern > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box.call {
+    display: flex;
+    justify-content: center;
+}
 .shadowed {
 	border: 1px solid var(--accent);
 	box-shadow: 3px 3px;
